--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sat Oct 11 2025 04:19:19 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html>
 <html data-wf-page="68be24d0e412cb3032118a59" data-wf-site="68be24cfe412cb3032118a4b">
 <head>
   <meta charset="utf-8">
