hero section added

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue Oct 14 2025 04:27:43 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue Oct 14 2025 17:53:24 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="68be24d0e412cb3032118a59" data-wf-site="68be24cfe412cb3032118a4b">
 <head>
   <meta charset="utf-8">
@@ -44,23 +44,45 @@
                 </div>
               </div>
             </a>
-            <div class="menu-button w-nav-button">
+            <div data-w-id="4acafeda-2338-ba75-7aae-2cf4ce546562" class="menu-button w-nav-button">
               <div class="menu-button-wrapper">
-                <div class="menu-line"></div>
-                <div class="menu-line"></div>
-                <div class="menu-line"></div>
+                <div data-w-id="4acafeda-2338-ba75-7aae-2cf4ce546564" class="menu-line"></div>
+                <div data-w-id="4acafeda-2338-ba75-7aae-2cf4ce546565" class="menu-line"></div>
+                <div data-w-id="4acafeda-2338-ba75-7aae-2cf4ce546566" class="menu-line"></div>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
+    <section class="section hero">
+      <div class="w-layout-blockcontainer container w-container">
+        <div class="hero-wrapper">
+          <div class="hero-wrap">
+            <div class="hero-top-wrapper">
+              <div class="hero-logo-wrapper"><img src="images/Kairos-Labs-in-White.png" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 939.990234375px" srcset="images/Kairos-Labs-in-White-p-500.png 500w, images/Kairos-Labs-in-White-p-800.png 800w, images/Kairos-Labs-in-White-p-1080.png 1080w, images/Kairos-Labs-in-White.png 1500w" alt="Kairos-Labs Logo" class="hero-image"></div>
+              <div class="hero-top-content">
+                <h1 class="hero-top-title">Labs</h1>
+                <div class="hero-top-details">Development and building</div>
+              </div>
+            </div>
+            <div class="hero-bottom-wrapper">
+              <div>
+                <div class="hero-details-wrapper">
+                  <p class="hero-dtails"><span class="white-text">Lorem ipsum dolor sit amet,</span> consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <section class="section">
       <div class="w-layout-blockcontainer container w-container">
         <div class="footer-wrapper">
           <div class="footer-wrap">
             <div class="footer-left-wrapper">
-              <a href="#" class="footer-logo-wrapper w-inline-block"><img src="images/Kairos-Labs.svg" loading="lazy" alt="Kairos-Labs Logo" class="footer-logo"></a>
+              <a href="#" class="footer-logo-wrapper w-inline-block"><img src="images/Kairos-Labs-in-White.png" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 939.990234375px" srcset="images/Kairos-Labs-in-White-p-500.png 500w, images/Kairos-Labs-in-White-p-800.png 800w, images/Kairos-Labs-in-White-p-1080.png 1080w, images/Kairos-Labs-in-White.png 1500w" alt="Kairos-Labs Logo" class="footer-logo"></a>
             </div>
             <div class="footer-right-wrapper">
               <div class="footer-single-wrapper">
