--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue Oct 14 2025 17:53:24 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Wed Oct 15 2025 03:36:22 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="68be24d0e412cb3032118a59" data-wf-site="68be24cfe412cb3032118a4b">
 <head>
   <meta charset="utf-8">
@@ -71,6 +71,38 @@
                 <div class="hero-details-wrapper">
                   <p class="hero-dtails"><span class="white-text">Lorem ipsum dolor sit amet,</span> consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
                 </div>
+              </div>
+              <div class="hero-button-wrapper">
+                <div class="hero-button-wrap">
+                  <div class="hero-button-details">
+                    <div class="hero-button-title">Veganz Distribution</div>
+                  </div>
+                  <a href="#" class="hero-button-link">More Information</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="section about">
+      <div class="w-layout-blockcontainer container w-container">
+        <div class="about-wrapper">
+          <div class="about-top-wrapper">
+            <div class="section-top-button">
+              <a href="#" class="section-top-link w-inline-block">
+                <div class="section-top-icon"></div>
+                <div class="primary-top-button-text">
+                  <div class="primary-top-button-texts">About Us</div>
+                </div>
+              </a>
+            </div>
+            <div class="about-title-wrapper">
+              <div class="about-single-title">
+                <h2 class="about-black-title">Building bold ventures at the intersection of</h2>
+              </div>
+              <div class="about-single-title">
+                <h2 class="about-black-title">Consulting, Markets, E‑commerce &amp; Energy.</h2>
               </div>
             </div>
           </div>
