update about section

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Wed Oct 15 2025 03:36:22 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Oct 16 2025 04:06:19 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="68be24d0e412cb3032118a59" data-wf-site="68be24cfe412cb3032118a4b">
 <head>
   <meta charset="utf-8">
@@ -103,6 +103,100 @@
               </div>
               <div class="about-single-title">
                 <h2 class="about-black-title">Consulting, Markets, E‑commerce &amp; Energy.</h2>
+              </div>
+            </div>
+          </div>
+          <div class="about-wrap">
+            <div class="about-image-wrapper"><img src="images/hero-gif.gif" loading="lazy" alt="" class="about-image"></div>
+            <div class="about-content-wrapper">
+              <div data-w-id="e6bc0297-d079-65e9-3c85-fe388930a005" style="opacity:0" class="about-details-wrap">
+                <p class="about-details"><span>No fluff, just results.</span> Thoughtful design  and tools that make your work easier. We focus on smart design and useful features, project after project.</p>
+              </div>
+              <div class="about-content">
+                <div data-w-id="0975c7eb-ef03-e1fd-c149-632e4b01c58c" style="opacity:0" class="about-single-wrap">
+                  <div class="about-top-content">
+                    <div class="about-counter">
+                      <div data-w-id="b1883631-7dab-66e1-45db-aa4d19e20018" class="counter-number-wrap">
+                        <div style="-webkit-transform:translate3d(0, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="counter-number _01">
+                          <div class="number">0</div>
+                          <div class="number">1<br></div>
+                          <div class="number">2</div>
+                          <div class="number">3</div>
+                          <div class="number">4</div>
+                          <div class="number">5</div>
+                          <div class="number">6</div>
+                          <div class="number">7</div>
+                          <div class="number">8</div>
+                          <div class="number">9</div>
+                        </div>
+                        <div style="-webkit-transform:translate3d(0, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="counter-number _02">
+                          <div class="number">0</div>
+                          <div class="number">1<br></div>
+                          <div class="number">2</div>
+                          <div class="number">3</div>
+                          <div class="number">4</div>
+                          <div class="number">5</div>
+                          <div class="number">6</div>
+                          <div class="number">7</div>
+                          <div class="number">8</div>
+                          <div class="number">9</div>
+                        </div>
+                        <div class="number">+</div>
+                      </div>
+                    </div>
+                    <div class="about-number">01</div>
+                  </div>
+                  <div class="about-item-wrap">
+                    <div class="about-item-title-wrapper">
+                      <div class="about-item-title">This is some text inside.</div>
+                    </div>
+                    <div class="about-item-details-wrapper">
+                      <p class="about-item-details">We’ve delivered 50+ projects that help companies generate real results.</p>
+                    </div>
+                  </div>
+                </div>
+                <div data-w-id="92245559-a1a0-5031-1de5-cb915463d47a" style="opacity:0" class="about-single-wrap">
+                  <div class="about-top-content">
+                    <div class="about-counter">
+                      <div data-w-id="92245559-a1a0-5031-1de5-cb915463d47d" class="counter-number-wrap">
+                        <div style="-webkit-transform:translate3d(0, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="counter-number _01">
+                          <div class="number">0</div>
+                          <div class="number">1<br></div>
+                          <div class="number">2</div>
+                          <div class="number">3</div>
+                          <div class="number">4</div>
+                          <div class="number">5</div>
+                          <div class="number">6</div>
+                          <div class="number">7</div>
+                          <div class="number">8</div>
+                          <div class="number">9</div>
+                        </div>
+                        <div style="-webkit-transform:translate3d(0, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="counter-number _02">
+                          <div class="number">0</div>
+                          <div class="number">1<br></div>
+                          <div class="number">2</div>
+                          <div class="number">3</div>
+                          <div class="number">4</div>
+                          <div class="number">5</div>
+                          <div class="number">6</div>
+                          <div class="number">7</div>
+                          <div class="number">8</div>
+                          <div class="number">9</div>
+                        </div>
+                        <div class="number">+</div>
+                      </div>
+                    </div>
+                    <div class="about-number">01</div>
+                  </div>
+                  <div class="about-item-wrap">
+                    <div class="about-item-title-wrapper">
+                      <div class="about-item-title">This is some text inside.</div>
+                    </div>
+                    <div class="about-item-details-wrapper">
+                      <p class="about-item-details">We’ve delivered 50+ projects that help companies generate real results.</p>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
